--- a/landingPageVue/package.json
+++ b/landingPageVue/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "simplelightbox": "^2.14.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
