--- a/landingPageVue/package.json
+++ b/landingPageVue/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "simplelightbox": "^2.1.0",
     "vue": "^3.5.13",
+    "vue-easy-lightbox": "^1.19.0",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
